<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sample Game</string>
    <string name="app_logo_top">Sample Game</string>
    <string name="app_logo_bottom">Can Zhang</string>
    <string name="app_version_info">Version 2.0.0\nCopyright © 2013 Tom\n</string>
    <string name="game">Game Screen</string>
    <string name="scores">Scores</string>
    <string name="settings">Settings Screen</string>
    <string name="help">Help Screen</string>
    
    <!-- menu screen -->
    <string name="menu">Main Menu</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_play">Play Game</string>
    <string name="menu_item_scores">View Scores</string>
    <string name="menu_item_help">Help</string>
    
    <!-- scores screen -->
	<string name="all_scores">All Scores</string>
	<string name="friends_scores">Scores of Friends</string>
	<string name="no_scores">No scores to show.</string>
	<string name="username">Username</string>
	<string name="rank">Ranking</string>
	<string name="score">Score</string>
	<string name="wait_msg">Retrieving Scores...</string>
	<string name="wait_title">Loading...</string>

	<!-- setting screen -->
	<string name="settings_nickname">Nickname:</string>
    <string name="settings_email">Email:</string>
    <string name="settings_dob">Birth Date:</string>
    <string name="settings_dob_not_set">No Date Set</string>
    <string name="settings_button_dob">Pick Date</string>
    <string name="settings_button_pwd">Set Password</string>
    <string name="settings_gender">Gender:</string>
    <string name="settings_password">Password:</string>
    <string name="settings_password2">Password (again):</string>
    <string name="settings_pwd_set">Password Set</string>
    <string name="settings_pwd_not_set">No Password Set</string>
    <string name="settings_pwd_not_equal">Passwords do not match, please try again.</string>
    <string name="settings_pwd_equal">Passwords match.</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_neutral">Prefer Not To Say</string>
    <string name="set_password_string">Set Password</string>
</resources>
