<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black">
	<TextView  
    	android:id="@+id/TextViewTopTitle"
   	 	android:layout_height="wrap_content"
  	  	android:layout_width="fill_parent"  
 	  	android:text="@string/app_logo_top"
  	  	android:textColor="@color/logo_color"
    	android:textSize="@dimen/logo_size"
    	android:layout_gravity="center_vertical|center_horizontal"
    	android:gravity="top|center"
    ></TextView>
	<TableLayout 
 	   	android:id="@+id/TableLayout01"
   		android:stretchColumns="*"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent">
    	<TableRow
        	android:id="@+id/TableRow01"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:layout_gravity="center_vertical|center_horizontal">
        	<ImageView
        	    android:id="@+id/ImageView2_Left"
        	    android:layout_height="wrap_content"
        	    android:layout_width="fill_parent"
        	    android:layout_gravity="center_vertical|center_horizontal"
        	    android:src="@drawable/splash1">
        	</ImageView>
        	<ImageView
        	    android:id="@+id/ImageView2_Right"
        	    android:layout_height="wrap_content"
        	    android:layout_width="fill_parent"
        	    android:layout_gravity="center_vertical|center_horizontal"
        	    android:src="@drawable/splash2">
        	</ImageView>
     	</TableRow>
     	<TableRow
        	android:id="@+id/TableRow02"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:layout_gravity="center_vertical|center_horizontal">
        	<ImageView
        	    android:id="@+id/ImageView3_Left"
        	    android:layout_height="wrap_content"
        	    android:layout_width="fill_parent"
        	    android:layout_gravity="center_vertical|center_horizontal"
        	    android:src="@drawable/splash3">
        	</ImageView>
        	<ImageView
        	    android:id="@+id/ImageView4_Right"
        	    android:layout_height="wrap_content"
        	    android:layout_width="fill_parent"
        	    android:layout_gravity="center_vertical|center_horizontal"
        	    android:src="@drawable/splash4">
        	</ImageView>
       	</TableRow>
 	</TableLayout>
 	<TextView
 	    android:id="@+id/TextViewBottomTitle"
 	    android:layout_height="wrap_content"
 	    android:layout_width="fill_parent"
 	    android:text="@string/app_logo_bottom"
 	    android:textColor="@color/logo_color"
 	    android:textSize="@dimen/logo_size"
 	    android:gravity="center">
 	</TextView>
 	<TextView
 	    android:id="@+id/TextViewBottomVersion"
 	    android:layout_height="fill_parent"
 	    android:layout_width="fill_parent"
 	    android:layout_gravity="center_vertical|center_horizontal"
 	    android:text="@string/app_version_info"
 	    android:textColor="@color/version_color"
 	    android:textSize="@dimen/version_size"
 	    android:gravity="center"
 	    android:background="@color/version_bkgrd"
 	    android:lineSpacingExtra="@dimen/version_spacing">
 	</TextView>
</LinearLayout>
